# agency

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
doc/: architecture.md  plan.md  working-practices.md
examples/: config.rs  hello.rs  m1_hello.rs  repl.rs  vision.rs
src/: config.rs  error.rs  lib.rs  main.rs  message.rs  provider.rs  repl.rs  stream.rs
src/providers/: openai_compat.rs
