[package]
name = "agency"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An LLM agent built step-by-step in Rust"
readme = "README.md"
publish = false

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
