[package]
name = "agency"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An LLM agent built step-by-step in Rust"
readme = "README.md"
publish = false

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
futures = "0.3"
nu-ansi-term = "0.50"
reedline = "0.47.0"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
